# frelvex

./: .gitignore  .~lock.WS_Driagramas.odg#  CMakeLists.txt  README.md  WS_Driagramas.odg  partitions.csv  sdkconfig
components/fsys/: CMakeLists.txt  fsys.c  fsys_main.c
components/fsys/include/: fsys_main.h
components/gpio/: CMakeLists.txt  gpio_main.c
components/mqtt/: CMakeLists.txt  mqtt_main.c
components/ota/: CMakeLists.txt  ota_main.c
components/strfn/: CMakeLists.txt  strfn.c  strfn_main.c
components/strfn/include/: strfn.h
components/uart/: CMakeLists.txt  uart_main.c
components/wifi/: CMakeLists.txt  wifi.c  wifi_main.c
components/wsse/: CMakeLists.txt  ws_app.c  ws_get.c  ws_main.c  ws_text.c  wsse.c
components/wsse/include/: ws_app.h  ws_get.h  ws_text.h  wsse.h
files/: Readme.md
files/css/lib/: bulma.css
files/html/: ota.html
files/html/app/: index.js
files/html/body/: body.html
files/html/footer/: footer.html
files/html/header/: empty.html  head.html  header.html  menu.html
files/index/: back.js  index.css  index.html  index.js
files/js/: ws_main.js  wsclient.js
files/js/app/: ws_app.js
files/js/footer/: ws_app.js
files/js/lib/: custom.js
files/js/public/: js-led.js  js-new.js  main.html
files/lib/css/: fonts.css
files/section/: chart.html  main.html  new_element.html  ota.html  sc-btn.html  sc-led.html
files/section/login/: login.html  login.js
files/section/ota/: ota.html  ota.js
files/topic/board/: board.html  board.json  panel.js
files/topic/cebox/: cebox.html
main/: main.c
(+9 files in other folders)
